lib/bait/tests/inout_error/struct/mut_method.in.bt
struct Foo{}

fun (mut f Foo) bar() {}

f := Foo{}
f.bar()
